env/qa/vpc.auto.tfvars.json
{
  "vpcs": {
    "vpc-014c0cbc184161054": {
      "cidr_block": "10.0.0.0/16",
      "instance_tenancy": "default",
      "enable_dns_support": true,
      "enable_dns_hostnames": true,
      "tags": [
        {
          "Key": "Project",
          "Value": "HelloPorter"
        },
        {
          "Key": "Name",
          "Value": "VPC"
        },
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterVPC"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        }
      ],
      "subnets": [
        {
          "subnet_id": "subnet-0dabedfcfc4e86f38",
          "cidr_block": "10.0.4.0/24",
          "availability_zone": "us-east-1b",
          "availability_zone_id": "use1-az6",
          "map_public_ip_on_launch": false,
          "tags": [
            {
              "Key": "EnvironmentName",
              "Value": "qa"
            },
            {
              "Key": "aws:cloudformation:stack-name",
              "Value": "hp-enable-security"
            },
            {
              "Key": "aws:cloudformation:stack-id",
              "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
            },
            {
              "Key": "Project",
              "Value": "HelloPorter"
            },
            {
              "Key": "Name",
              "Value": "PrivateSubnet(AZ2)"
            },
            {
              "Key": "aws:cloudformation:logical-id",
              "Value": "HelloPorterPrivateSubnet2"
            }
          ]
        },
        {
          "subnet_id": "subnet-0efb1c49d54070b0d",
          "cidr_block": "10.0.1.0/24",
          "availability_zone": "us-east-1a",
          "availability_zone_id": "use1-az4",
          "map_public_ip_on_launch": false,
          "tags": [
            {
              "Key": "Project",
              "Value": "HelloPorter"
            },
            {
              "Key": "Name",
              "Value": "PublicSubnet(AZ1)"
            },
            {
              "Key": "aws:cloudformation:logical-id",
              "Value": "HelloPorterPublicSubnet1"
            },
            {
              "Key": "EnvironmentName",
              "Value": "qa"
            },
            {
              "Key": "aws:cloudformation:stack-id",
              "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
            },
            {
              "Key": "aws:cloudformation:stack-name",
              "Value": "hp-enable-security"
            }
          ]
        },
        {
          "subnet_id": "subnet-0aa04b9d682389ba2",
          "cidr_block": "10.0.3.0/24",
          "availability_zone": "us-east-1b",
          "availability_zone_id": "use1-az6",
          "map_public_ip_on_launch": false,
          "tags": [
            {
              "Key": "Name",
              "Value": "PublicSubnet(AZ2)"
            },
            {
              "Key": "Project",
              "Value": "HelloPorter"
            },
            {
              "Key": "aws:cloudformation:stack-name",
              "Value": "hp-enable-security"
            },
            {
              "Key": "EnvironmentName",
              "Value": "qa"
            },
            {
              "Key": "aws:cloudformation:stack-id",
              "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
            },
            {
              "Key": "aws:cloudformation:logical-id",
              "Value": "HelloPorterPublicSubnet2"
            }
          ]
        },
        {
          "subnet_id": "subnet-09d27dee6adbaea7c",
          "cidr_block": "10.0.2.0/24",
          "availability_zone": "us-east-1a",
          "availability_zone_id": "use1-az4",
          "map_public_ip_on_launch": false,
          "tags": [
            {
              "Key": "Project",
              "Value": "HelloPorter"
            },
            {
              "Key": "Name",
              "Value": "PrivateSubnet(AZ1)"
            },
            {
              "Key": "aws:cloudformation:stack-name",
              "Value": "hp-enable-security"
            },
            {
              "Key": "aws:cloudformation:stack-id",
              "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
            },
            {
              "Key": "EnvironmentName",
              "Value": "qa"
            },
            {
              "Key": "aws:cloudformation:logical-id",
              "Value": "HelloPorterPrivateSubnet1"
            }
          ]
        }
      ],
      "nat_gateways": [
        {
          "nat_gateway_id": "nat-00b1ef833622d8c15",
          "subnet_id": "subnet-0efb1c49d54070b0d",
          "state": "available",
          "elastic_ip": "44.216.128.107",
          "tags": [
            {
              "Key": "Project",
              "Value": "HelloPorter"
            },
            {
              "Key": "aws:cloudformation:stack-name",
              "Value": "hp-enable-security"
            },
            {
              "Key": "aws:cloudformation:logical-id",
              "Value": "HelloPorterNatGateway1"
            },
            {
              "Key": "aws:cloudformation:stack-id",
              "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
            },
            {
              "Key": "EnvironmentName",
              "Value": "qa"
            }
          ]
        }
      ],
      "eips": [
        {
          "allocation_id": "eipalloc-0ea8ef5ee847a770c",
          "public_ip": "44.216.128.107",
          "association_id": "eipassoc-0248c68d2760eb28f",
          "tags": [
            {
              "Key": "Project",
              "Value": "HelloPorter"
            },
            {
              "Key": "Environment",
              "Value": "qa"
            },
            {
              "Key": "EnvironmentName",
              "Value": "qa"
            },
            {
              "Key": "aws:cloudformation:stack-name",
              "Value": "hp-enable-security"
            },
            {
              "Key": "aws:cloudformation:stack-id",
              "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
            },
            {
              "Key": "aws:cloudformation:logical-id",
              "Value": "HelloPorterNatGateway1EIP"
            },
            {
              "Key": "managed_by",
              "Value": "terraform"
            },
            {
              "Key": "environment",
              "Value": "qa"
            }
          ]
        },
        {
          "allocation_id": "eipalloc-0ed0e3e8ca391d124",
          "public_ip": "52.44.150.91",
          "association_id": "eipassoc-0a5d01617d515a331",
          "tags": [
            {
              "Key": "managed_by",
              "Value": "terraform"
            },
            {
              "Key": "environment",
              "Value": "qa"
            },
            {
              "Key": "Environment",
              "Value": "qa"
            }
          ]
        },
        {
          "allocation_id": "eipalloc-098379ee2981406af",
          "public_ip": "98.87.255.121",
          "association_id": null,
          "tags": [
            {
              "Key": "Env",
              "Value": "qa"
            },
            {
              "Key": "managed_by",
              "Value": "terraform"
            },
            {
              "Key": "environment",
              "Value": "qa"
            },
            {
              "Key": "Owner",
              "Value": "maceline.che@helloporter.com"
            },
            {
              "Key": "name ",
              "Value": "eip-qa"
            },
            {
              "Key": "Environment",
              "Value": "qa"
            },
            {
              "Key": "Name",
              "Value": "eip-qa"
            }
          ]
        }
      ]
    }
  },
  "subnets": {
    "subnet-0dabedfcfc4e86f38": {
      "subnet_id": "subnet-0dabedfcfc4e86f38",
      "cidr_block": "10.0.4.0/24",
      "availability_zone": "us-east-1b",
      "availability_zone_id": "use1-az6",
      "map_public_ip_on_launch": false,
      "tags": [
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        },
        {
          "Key": "Project",
          "Value": "HelloPorter"
        },
        {
          "Key": "Name",
          "Value": "PrivateSubnet(AZ2)"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterPrivateSubnet2"
        }
      ],
      "vpc_id": "vpc-014c0cbc184161054"
    },
    "subnet-0efb1c49d54070b0d": {
      "subnet_id": "subnet-0efb1c49d54070b0d",
      "cidr_block": "10.0.1.0/24",
      "availability_zone": "us-east-1a",
      "availability_zone_id": "use1-az4",
      "map_public_ip_on_launch": false,
      "tags": [
        {
          "Key": "Project",
          "Value": "HelloPorter"
        },
        {
          "Key": "Name",
          "Value": "PublicSubnet(AZ1)"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterPublicSubnet1"
        },
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        }
      ],
      "vpc_id": "vpc-014c0cbc184161054"
    },
    "subnet-0aa04b9d682389ba2": {
      "subnet_id": "subnet-0aa04b9d682389ba2",
      "cidr_block": "10.0.3.0/24",
      "availability_zone": "us-east-1b",
      "availability_zone_id": "use1-az6",
      "map_public_ip_on_launch": false,
      "tags": [
        {
          "Key": "Name",
          "Value": "PublicSubnet(AZ2)"
        },
        {
          "Key": "Project",
          "Value": "HelloPorter"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterPublicSubnet2"
        }
      ],
      "vpc_id": "vpc-014c0cbc184161054"
    },
    "subnet-09d27dee6adbaea7c": {
      "subnet_id": "subnet-09d27dee6adbaea7c",
      "cidr_block": "10.0.2.0/24",
      "availability_zone": "us-east-1a",
      "availability_zone_id": "use1-az4",
      "map_public_ip_on_launch": false,
      "tags": [
        {
          "Key": "Project",
          "Value": "HelloPorter"
        },
        {
          "Key": "Name",
          "Value": "PrivateSubnet(AZ1)"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        },
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterPrivateSubnet1"
        }
      ],
      "vpc_id": "vpc-014c0cbc184161054"
    }
  },
  "internet_gateways": {
    "igw-07a524e41d86bbbfa": {
      "Attachments": [
        {
          "State": "available",
          "VpcId": "vpc-014c0cbc184161054"
        }
      ],
      "InternetGatewayId": "igw-07a524e41d86bbbfa",
      "OwnerId": "389435993474",
      "Tags": [
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterInternetGateway"
        },
        {
          "Key": "Name",
          "Value": "IGTW"
        },
        {
          "Key": "Project",
          "Value": "HelloPorter"
        }
      ]
    }
  },
  "route_tables": {
    "rtb-0face42fbe13a571a": {
      "Associations": [
        {
          "Main": true,
          "RouteTableAssociationId": "rtbassoc-07e8c24c527be894f",
          "RouteTableId": "rtb-0face42fbe13a571a",
          "AssociationState": {
            "State": "associated"
          }
        }
      ],
      "PropagatingVgws": [],
      "RouteTableId": "rtb-0face42fbe13a571a",
      "Routes": [
        {
          "DestinationCidrBlock": "10.0.0.0/16",
          "GatewayId": "local",
          "Origin": "CreateRouteTable",
          "State": "active"
        }
      ],
      "Tags": [],
      "VpcId": "vpc-014c0cbc184161054",
      "OwnerId": "389435993474"
    },
    "rtb-09f61f0e7da6f66f8": {
      "Associations": [
        {
          "Main": false,
          "RouteTableAssociationId": "rtbassoc-09b4d47f10498fed3",
          "RouteTableId": "rtb-09f61f0e7da6f66f8",
          "SubnetId": "subnet-0aa04b9d682389ba2",
          "AssociationState": {
            "State": "associated"
          }
        },
        {
          "Main": false,
          "RouteTableAssociationId": "rtbassoc-0394aa788d208011a",
          "RouteTableId": "rtb-09f61f0e7da6f66f8",
          "SubnetId": "subnet-0efb1c49d54070b0d",
          "AssociationState": {
            "State": "associated"
          }
        }
      ],
      "PropagatingVgws": [],
      "RouteTableId": "rtb-09f61f0e7da6f66f8",
      "Routes": [
        {
          "DestinationCidrBlock": "10.0.0.0/16",
          "GatewayId": "local",
          "Origin": "CreateRouteTable",
          "State": "active"
        },
        {
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": "igw-07a524e41d86bbbfa",
          "Origin": "CreateRoute",
          "State": "active"
        }
      ],
      "Tags": [
        {
          "Key": "Project",
          "Value": "HelloPorter"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterPublicRouteTable"
        },
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        },
        {
          "Key": "Name",
          "Value": "PublicRoutes"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        }
      ],
      "VpcId": "vpc-014c0cbc184161054",
      "OwnerId": "389435993474"
    },
    "rtb-014429bf12104dfd0": {
      "Associations": [
        {
          "Main": false,
          "RouteTableAssociationId": "rtbassoc-0a5c476108a62702d",
          "RouteTableId": "rtb-014429bf12104dfd0",
          "SubnetId": "subnet-09d27dee6adbaea7c",
          "AssociationState": {
            "State": "associated"
          }
        }
      ],
      "PropagatingVgws": [],
      "RouteTableId": "rtb-014429bf12104dfd0",
      "Routes": [
        {
          "DestinationCidrBlock": "10.0.0.0/16",
          "GatewayId": "local",
          "Origin": "CreateRouteTable",
          "State": "active"
        },
        {
          "DestinationCidrBlock": "0.0.0.0/0",
          "NatGatewayId": "nat-00b1ef833622d8c15",
          "Origin": "CreateRoute",
          "State": "active"
        }
      ],
      "Tags": [
        {
          "Key": "Project",
          "Value": "HelloPorter"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterPrivateRouteTable1"
        },
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        },
        {
          "Key": "Name",
          "Value": "PrivateRoutes(AZ1)"
        }
      ],
      "VpcId": "vpc-014c0cbc184161054",
      "OwnerId": "389435993474"
    },
    "rtb-02fcb7d7964826665": {
      "Associations": [
        {
          "Main": false,
          "RouteTableAssociationId": "rtbassoc-0355064fa6c659957",
          "RouteTableId": "rtb-02fcb7d7964826665",
          "SubnetId": "subnet-0dabedfcfc4e86f38",
          "AssociationState": {
            "State": "associated"
          }
        }
      ],
      "PropagatingVgws": [],
      "RouteTableId": "rtb-02fcb7d7964826665",
      "Routes": [
        {
          "DestinationCidrBlock": "10.0.0.0/16",
          "GatewayId": "local",
          "Origin": "CreateRouteTable",
          "State": "active"
        },
        {
          "DestinationCidrBlock": "0.0.0.0/0",
          "NatGatewayId": "nat-00b1ef833622d8c15",
          "Origin": "CreateRoute",
          "State": "active"
        }
      ],
      "Tags": [
        {
          "Key": "Name",
          "Value": "PrivateRoutes(AZ2)"
        },
        {
          "Key": "Project",
          "Value": "HelloPorter"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterPrivateRouteTable2"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        },
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        }
      ],
      "VpcId": "vpc-014c0cbc184161054",
      "OwnerId": "389435993474"
    }
  },
  "security_groups": {
    "sg-0ef57ecb8bad743cb": {
      "group_name": "migrated-from-default-161054",
      "description": "Cloned from default SG sg-02ee099ffb346c942 (temporary migration SG)",
      "vpc_id": "vpc-014c0cbc184161054",
      "tags": [],
      "ingress_rules": [
        {
          "ip_protocol": "tcp",
          "from_port": 0,
          "to_port": 65535,
          "cidr_blocks": [
            "10.0.2.0/24",
            "10.0.4.0/24"
          ],
          "ipv6_cidr_blocks": [],
          "prefix_list_ids": [],
          "user_group_pairs": [
            {
              "UserId": "389435993474",
              "GroupId": "sg-0ef57ecb8bad743cb"
            }
          ]
        },
        {
          "ip_protocol": "-1",
          "from_port": null,
          "to_port": null,
          "cidr_blocks": [
            "68.134.127.181/32"
          ],
          "ipv6_cidr_blocks": [],
          "prefix_list_ids": [],
          "user_group_pairs": []
        },
        {
          "ip_protocol": "tcp",
          "from_port": 22,
          "to_port": 22,
          "cidr_blocks": [
            "68.134.127.181/32"
          ],
          "ipv6_cidr_blocks": [],
          "prefix_list_ids": [],
          "user_group_pairs": []
        }
      ],
      "egress_rules": [
        {
          "ip_protocol": "-1",
          "from_port": null,
          "to_port": null,
          "cidr_blocks": [
            "0.0.0.0/0"
          ],
          "ipv6_cidr_blocks": [],
          "prefix_list_ids": [],
          "user_group_pairs": []
        }
      ]
    },
    "sg-0a0782b4c2b2a13d9": {
      "group_name": "RedisVPCSecurityGroups",
      "description": "Migrated-from-default-161054",
      "vpc_id": "vpc-014c0cbc184161054",
      "tags": [
        {
          "Key": "Name",
          "Value": "migrated-from-default-161054"
        }
      ],
      "ingress_rules": [
        {
          "ip_protocol": "tcp",
          "from_port": 0,
          "to_port": 65535,
          "cidr_blocks": [
            "10.0.2.0/24",
            "10.0.4.0/24"
          ],
          "ipv6_cidr_blocks": [],
          "prefix_list_ids": [],
          "user_group_pairs": [
            {
              "UserId": "389435993474",
              "GroupId": "sg-0a0782b4c2b2a13d9"
            }
          ]
        },
        {
          "ip_protocol": "-1",
          "from_port": null,
          "to_port": null,
          "cidr_blocks": [
            "68.134.127.181/32"
          ],
          "ipv6_cidr_blocks": [],
          "prefix_list_ids": [],
          "user_group_pairs": []
        },
        {
          "ip_protocol": "tcp",
          "from_port": 22,
          "to_port": 22,
          "cidr_blocks": [
            "68.134.127.181/32"
          ],
          "ipv6_cidr_blocks": [],
          "prefix_list_ids": [],
          "user_group_pairs": []
        }
      ],
      "egress_rules": [
        {
          "ip_protocol": "-1",
          "from_port": null,
          "to_port": null,
          "cidr_blocks": [
            "0.0.0.0/0"
          ],
          "ipv6_cidr_blocks": [],
          "prefix_list_ids": [],
          "user_group_pairs": []
        }
      ]
    },
    "sg-02ee099ffb346c942": {
      "group_name": "default",
      "description": "default VPC security group",
      "vpc_id": "vpc-014c0cbc184161054",
      "tags": [],
      "ingress_rules": [],
      "egress_rules": []
    }
  },
  "network_acls": {
    "acl-01bb6c8bb956e7884": {
      "Associations": [
        {
          "NetworkAclAssociationId": "aclassoc-00e5d84b46fb6dbd2",
          "NetworkAclId": "acl-01bb6c8bb956e7884",
          "SubnetId": "subnet-0aa04b9d682389ba2"
        },
        {
          "NetworkAclAssociationId": "aclassoc-095c8022b0d13e903",
          "NetworkAclId": "acl-01bb6c8bb956e7884",
          "SubnetId": "subnet-0efb1c49d54070b0d"
        }
      ],
      "Entries": [
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "PortRange": {
            "From": 80,
            "To": 80
          },
          "Protocol": "6",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "PortRange": {
            "From": 443,
            "To": 443
          },
          "Protocol": "6",
          "RuleAction": "allow",
          "RuleNumber": 101
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "PortRange": {
            "From": 3389,
            "To": 3389
          },
          "Protocol": "6",
          "RuleAction": "deny",
          "RuleNumber": 102
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "PortRange": {
            "From": 1024,
            "To": 65535
          },
          "Protocol": "6",
          "RuleAction": "allow",
          "RuleNumber": 106
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "PortRange": {
            "From": 0,
            "To": 1023
          },
          "Protocol": "6",
          "RuleAction": "allow",
          "RuleNumber": 107
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "PortRange": {
            "From": 80,
            "To": 80
          },
          "Protocol": "6",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "PortRange": {
            "From": 443,
            "To": 443
          },
          "Protocol": "6",
          "RuleAction": "allow",
          "RuleNumber": 101
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "PortRange": {
            "From": 22,
            "To": 22
          },
          "Protocol": "6",
          "RuleAction": "deny",
          "RuleNumber": 102
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "PortRange": {
            "From": 3389,
            "To": 3389
          },
          "Protocol": "6",
          "RuleAction": "deny",
          "RuleNumber": 108
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "PortRange": {
            "From": 1024,
            "To": 65535
          },
          "Protocol": "6",
          "RuleAction": "allow",
          "RuleNumber": 110
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32766
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        }
      ],
      "IsDefault": false,
      "NetworkAclId": "acl-01bb6c8bb956e7884",
      "Tags": [
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterPublicNetworkACL"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        },
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        },
        {
          "Key": "Project",
          "Value": "HelloPorter"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "Name",
          "Value": "PublicNetworkACL"
        }
      ],
      "VpcId": "vpc-014c0cbc184161054",
      "OwnerId": "389435993474"
    },
    "acl-0e50ef5a0ca3851a3": {
      "Associations": [
        {
          "NetworkAclAssociationId": "aclassoc-0dc9a531c6d0dc7fa",
          "NetworkAclId": "acl-0e50ef5a0ca3851a3",
          "SubnetId": "subnet-0dabedfcfc4e86f38"
        },
        {
          "NetworkAclAssociationId": "aclassoc-0c78d7504a6dd0e07",
          "NetworkAclId": "acl-0e50ef5a0ca3851a3",
          "SubnetId": "subnet-09d27dee6adbaea7c"
        }
      ],
      "Entries": [
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "PortRange": {
            "From": 0,
            "To": 65535
          },
          "Protocol": "6",
          "RuleAction": "allow",
          "RuleNumber": 101
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "PortRange": {
            "From": 22,
            "To": 22
          },
          "Protocol": "6",
          "RuleAction": "deny",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "PortRange": {
            "From": 3389,
            "To": 3389
          },
          "Protocol": "6",
          "RuleAction": "deny",
          "RuleNumber": 101
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 32766
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        }
      ],
      "IsDefault": false,
      "NetworkAclId": "acl-0e50ef5a0ca3851a3",
      "Tags": [
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterPrivateNetworkACL"
        },
        {
          "Key": "Name",
          "Value": "PrivateNetworkACL"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "Project",
          "Value": "HelloPorter"
        }
      ],
      "VpcId": "vpc-014c0cbc184161054",
      "OwnerId": "389435993474"
    }
  },
  "nat_gateways": {
    "nat-00b1ef833622d8c15": {
      "nat_gateway_id": "nat-00b1ef833622d8c15",
      "subnet_id": "subnet-0efb1c49d54070b0d",
      "state": "available",
      "elastic_ip": "44.216.128.107",
      "tags": [
        {
          "Key": "Project",
          "Value": "HelloPorter"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterNatGateway1"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        },
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        }
      ]
    }
  },
  "eips": {
    "eipalloc-0ea8ef5ee847a770c": {
      "allocation_id": "eipalloc-0ea8ef5ee847a770c",
      "public_ip": "44.216.128.107",
      "association_id": "eipassoc-0248c68d2760eb28f",
      "tags": [
        {
          "Key": "Project",
          "Value": "HelloPorter"
        },
        {
          "Key": "Environment",
          "Value": "qa"
        },
        {
          "Key": "EnvironmentName",
          "Value": "qa"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "hp-enable-security"
        },
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:us-east-1:389435993474:stack/hp-enable-security/d09e5590-5f1a-11ee-a33c-0ee2522192f3"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "HelloPorterNatGateway1EIP"
        },
        {
          "Key": "managed_by",
          "Value": "terraform"
        },
        {
          "Key": "environment",
          "Value": "qa"
        }
      ]
    },
    "eipalloc-0ed0e3e8ca391d124": {
      "allocation_id": "eipalloc-0ed0e3e8ca391d124",
      "public_ip": "52.44.150.91",
      "association_id": "eipassoc-0a5d01617d515a331",
      "tags": [
        {
          "Key": "managed_by",
          "Value": "terraform"
        },
        {
          "Key": "environment",
          "Value": "qa"
        },
        {
          "Key": "Environment",
          "Value": "qa"
        }
      ]
    },
    "eipalloc-098379ee2981406af": {
      "allocation_id": "eipalloc-098379ee2981406af",
      "public_ip": "98.87.255.121",
      "association_id": null,
      "tags": [
        {
          "Key": "Env",
          "Value": "qa"
        },
        {
          "Key": "managed_by",
          "Value": "terraform"
        },
        {
          "Key": "environment",
          "Value": "qa"
        },
        {
          "Key": "Owner",
          "Value": "maceline.che@helloporter.com"
        },
        {
          "Key": "name ",
          "Value": "eip-qa"
        },
        {
          "Key": "Environment",
          "Value": "qa"
        },
        {
          "Key": "Name",
          "Value": "eip-qa"
        }
      ]
    }
  }
}
